--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -47,12 +47,16 @@ h6 {
   font-size: 1.25em;
 }
 h1, h2, h3, h4, h5, h6 {
+  margin: 30px 0;
   text-transform: uppercase;
 }
 
 h1, h2, h3, h4, h5, h6, p {
-  margin: 0 0 15px;
   color: inherit;
+}
+
+p {
+  margin: 0 0 15px;
 }
 
 /* ----------------------------------------------------------------------------
